--- a/Personal/Personal.css
+++ b/Personal/Personal.css
@@ -1,45 +1,35 @@
 body {
 	background-color: rgb(58,58,58);
 }
+/*font work*/
+p {
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
+	font-size: 1.2em;
+}
+h1,h2,h3,h4 {
+	font-family: 'Montserrat', sans-serif;
+}
+h1 {
+	font-size: 3.5em;
+}
+h4 {
+	font-size: 2em;
+}
+h3 {
+	color: rgb(115,115,115);
+}
+/*general bootstrap*/
 .container-fluid {
 	background-color: #FFFFF0;
 	margin-top: 3%;
 	margin-left: 3%;
 	margin-right: 3%;
 }
-/* CSS declarations go here */
-.mainBanner {
-	margin-left: auto;
-	margin-right: auto;
-
-}
-.introContainer {
-	width: 100%;
-}
-.details {
-	width: 80%;
-	height: 50px;
-	margin: 0 auto;
-}
-.namePlate {
-	margin-top: 5%;
-	margin-left: auto;
-	margin-right: auto;
-	font-size: 42px;
-}
-
-.zoomBar {
-	width: 100%;
-	margin: 0 auto;
-	padding-bottom: 40px;
-}
-h3 {
-	color: rgb(115,115,115);
-}
 /* Zoom bar line stuff eventually figure out how to make the line shorter and centered*/
 .col-sm-3.text-center.zoomLabels {
 	color: black;
-	font-size: 20px;
+	font-size: 1.675em;
 	text-decoration:none;
 }
 .col-sm-3.text-center.zoomLabels:before {
@@ -61,10 +51,34 @@ h3 {
 	-webkit-transform: scaleX(1);
 	transform: scaleX(1);
 }
-
+/* intro/top */
+.mainBanner {
+	margin-left: auto;
+	margin-right: auto;
+}
+.introContainer {
+	width: 100%;
+}
+.details {
+	width: 80%;
+	height: 4.167em;
+	margin: 0 auto;
+}
+.namePlate {
+	margin-top: 5%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 0em;
+	font-size: 3.0;
+}
+.zoomBar {
+	width: 100%;
+	margin: 0 auto;
+	padding-bottom: 40px;
+}
 /* My picture information */
 .media {
-	margin-top: 60px;
+	margin-top: 1em;
 	margin-left: 10%;
 	margin-right: 10%;
 }
@@ -76,7 +90,6 @@ h3 {
 	padding-top: 5%;
 	padding-left: 5%;
 }
-
 /*Skills*/
 .skills-container {
 	margin-top: 200px;
@@ -89,6 +102,9 @@ h3 {
 	padding-top: .1em;
 	padding-bottom: .2em;
 }
+.skills-about {
+	font-size: 1.2em;
+}
 #prof-list {
 	list-style-type: none;
 }
@@ -98,7 +114,7 @@ h3 {
 }
 .skill-bars {
 	background-color: #8FBFD1;
-	height: 10px;
+	height: .9em;
 	display: inline-block;
 }
 #contact-list {
@@ -116,13 +132,21 @@ h3 {
 /*Projects template*/
 .projects-container {
 	width: 100%;
-	height: 700px;
-	padding-top: 200px;
+	height: 58.33em;
+	padding-top: 16.666em;
 }
 
 /*Education*/
 #education-container {
 	width: 100%;
-	height: 400px;
-	padding-top: 200px;
+	height: 50em;
+	padding-top: 16.666em;
+}
+
+/*Footer*/
+#footer-bar {
+	margin-left: -15%;
+	width: 110%;
+	height: 4em;
+	background-color: black;
 }
